--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,40 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<nav class="navbar navbar-light bg-faded">
+  <a class="navbar-brand" [routerLink]="['coreHttpApi']">Core Http API</a>
+  <ul class="nav navbar-nav">
+    <li class="nav-item" [routerLinkActive]="['active']">
+      <a class="nav-link"
+         [routerLink]="['reactive']">
+         Reactive Page
+      </a>
+    </li>
+    <li class="nav-item" [routerLinkActive]="['active']">
+      <a class="nav-link" [routerLink]="['promise']">Promise Http Page</a>
+    </li>
+    <li class="nav-item" style="cursor: pointer;">
+      <a class="nav-link" (click)='navigateTo($event)'>Template Page</a>
+    </li>
+    <li class="nav-item" style="cursor: pointer;">
+      <a class="nav-link" (click)='navigateTo($event)'>Model Driven Page</a>
+    </li>
+    <li class="nav-item" style="cursor: pointer;">
+      <a class="nav-link" (click)='navigateTo($event)'>Joke List Page</a>
+    </li>
+    <!-- navigation example -->
+    <!-- <li class="nav-item" style="cursor: pointer;">
+      <a class="nav-link" href="/jokeList">Joke List Page</a>
+    </li> -->
+  </ul>
+</nav>
+<div style="text-align:center;">
   <!-- <h1>
     Welcome to Query List: {{joke.setup}}
   </h1> -->
   <img width="100" [src]=" imageUrl | default: 'http://www.google.co.in/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png':true">
   <img width="70" src="../assets/image5.jpg">
+  <img width="40" height="40" src="../assets/image2.jpg">
 </div>
-<img width="40" height="40" src="../assets/image2.jpg">
+
 <!-- <app-joke></app-joke>
 <h2>Here are some links to help you start: </h2>
 <ul>
@@ -42,3 +70,23 @@
 <!-- <app-model-driven></app-model-driven> -->
 <!-- <app-reactive-model></app-reactive-model> -->
 <!-- <app-template-form></app-template-form> -->
+<!-- <app-injectors></app-injectors> -->
+<!-- <app-provider></app-provider> -->
+<!-- <app-token></app-token> -->
+<!-- <app-config-of-service></app-config-of-service> -->
+
+<!-- <div class="row">
+  <div class="col-xs-6">
+    <app-config-of-service><app-injectors></app-injectors></app-config-of-service>
+  </div>
+  <div class="col-xs-6">
+    <app-config-of-service><app-injectors></app-injectors></app-config-of-service>
+  </div>
+</div> -->
+<app-hook></app-hook>
+<div style="text-align: center;margin: 2%;padding: 2%;">
+  <!-- <app-core-http-api></app-core-http-api>
+  <app-http-with-promise></app-http-with-promise> -->
+  <router-outlet></router-outlet>
+</div>
+
