--- a/src/app/components/joke-list/joke-list.component.html
+++ b/src/app/components/joke-list/joke-list.component.html
@@ -1,4 +1,3 @@
-
 <div class="card card-block" *ngFor="let joke of jokes" [appCcCardHover]="{querySelector:'p'}">
   <h4 class="card-title">{{joke.setup}}</h4>
   <!-- <p class="card-text" [hidden]="joke.hide">{{joke.punchline}}</p> -->
@@ -12,8 +11,7 @@
         (click)="addJoke()">Add Joke
 </button>
 <button type="button"
-        class="btn btn-danger"
-        (click)="deleteJoke()">Clear Jokes
+        class="btn btn-danger" (click)="deleteJoke()">Clear Jokes
 </button>
 <h4>ngFor and ngSwitch directive </h4>
 <ul *ngFor="let person of people" [ngSwitch]="person.country">
