--- a/src/app/components/template-form/template-form.component.html
+++ b/src/app/components/template-form/template-form.component.html
@@ -1,4 +1,4 @@
-<form novalidate #f='ngForm' (ngSubmit)="onSubmit()">
+<form novalidate #f='ngForm' (ngSubmit)="onSubmit()" style="text-align: left">
   <fieldset ngModelGroup="name">
     <div class="form-group">
       <label>First Name</label>
@@ -69,4 +69,4 @@
   </div>
   <button class="btn btn-primary" [disabled]="f.invalid">Submit</button>
 </form>
-<pre>{{f.value |json}}</pre>
+<pre style="text-align: left">{{f.value |json}}</pre>
