--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -83,6 +83,8 @@
     <app-config-of-service><app-injectors></app-injectors></app-config-of-service>
   </div>
 </div> -->
+<input type="text" [(ngModel)]="name">
+<button (click)='onNameChange()'>Name Change</button>
 <app-hook></app-hook>
 <div style="text-align: center;margin: 2%;padding: 2%;">
   <!-- <app-core-http-api></app-core-http-api>
